--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,8 +26,9 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body class="center">
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <h1>The Amazing Button Press Game!</h1>
     <div id="root"></div>
     <!--
       This HTML file is a template.
