--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -13,11 +13,8 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Button press game</title>
   </head>
-  <body class="center">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-      <div class="centerBody">
-      <h1 class="title">The Amazing Button Press Game!</h1>
       <div id="root"></div>
-      </div>
   </body>
 </html>
